Bug 138018 - FILEOPEN DOCX Chart leader line visible when custom positioned data label is inside pie chart.
Summary: FILEOPEN DOCX Chart leader line visible when custom positioned data label is ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: OOXML-Chart Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-11-05 15:28 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (107.14 KB, image/png)
2020-11-05 15:28 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-11-05 15:28:17 UTC
Created attachment 167038 [details]
Screenshot of the original document side by side in Word and Writer

Attachment #165368 [details] contains a pie chart with data labels positioned as Centered by default, but some have custom position, inside their pie slices.
For these the leader lines are not shown in Word (despite being enabled), but are shown in Writer (since they are enabled).

Steps to reproduce:
    1. Open Attachment #165368 [details]

Actual results:
Data labels for the 5% and 9% slices have leader lines.

Expected results:
Guess it makes no sense to show leader lines if the labels are inside the pie.

LibreOffice details:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: eeed9103350d886f5913aed9b525d863a421dffa
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 Commit Notification 2020-11-17 09:10:57 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c7d0c8a32f71d597f33c9219fe8099e5381ca35

tdf#138018 don't show leader lines inside pie chart

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 NISZ LibreOffice Team 2020-12-31 10:40:56 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 368c56144aab5794c39d5bc2082d9b3d6d7cebdb
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!