tdf#138018 don't show leader lines inside pie chart

only show them outside, as intended.

Change-Id: I87dee2d33f4f876ffca208f69a069e1f0bcee688